header fix: now hint can not be hovered while invisible

--- a/src/main/resources/static/styles/header.css
+++ b/src/main/resources/static/styles/header.css
@@ -126,6 +126,7 @@
 #create-container:hover .create-hint {
     bottom: -88px;
     opacity: 1;
+    pointer-events: all;
 }
 
 .create-hint {
@@ -135,6 +136,7 @@
     padding: 10px 10px;
     border-radius: 10px;
     opacity: 0;
+    pointer-events: none;
     transition: opacity 0.4s;
 }
 
